[kube-prometheus-stack] add grafana crd datasources
Signed-off-by: Oleg Tsymbal <dzirg44@gmail.com>

--- a/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
@@ -22,63 +22,4 @@ data:
 {{- if .Values.grafana.prune }}
     prune: {{ .Values.grafana.prune }}
 {{- end }}
-    datasources:
-{{- $scrapeInterval := .Values.grafana.sidecar.datasources.defaultDatasourceScrapeInterval | default .Values.prometheus.prometheusSpec.scrapeInterval | default "30s" }}
-{{- if .Values.grafana.sidecar.datasources.defaultDatasourceEnabled }}
-    - name: "{{ .Values.grafana.sidecar.datasources.name }}"
-      type: prometheus
-      uid: {{ .Values.grafana.sidecar.datasources.uid }}
-      {{- if .Values.grafana.sidecar.datasources.url }}
-      url: {{ .Values.grafana.sidecar.datasources.url }}
-      {{- else }}
-      url: http://{{ template "kube-prometheus-stack.fullname" . }}-prometheus.{{ template "kube-prometheus-stack.namespace" . }}:{{ .Values.prometheus.service.port }}/{{ trimPrefix "/" .Values.prometheus.prometheusSpec.routePrefix }}
-      {{- end }}
-      access: proxy
-      isDefault: {{ .Values.grafana.sidecar.datasources.isDefaultDatasource }}
-      jsonData:
-        httpMethod: {{ .Values.grafana.sidecar.datasources.httpMethod }}
-        timeInterval: {{ $scrapeInterval }}
-        {{- if .Values.grafana.sidecar.datasources.timeout }}
-        timeout: {{ .Values.grafana.sidecar.datasources.timeout }}
-        {{- end }}
-{{- if .Values.grafana.sidecar.datasources.exemplarTraceIdDestinations }}
-        exemplarTraceIdDestinations:
-        - datasourceUid: {{ .Values.grafana.sidecar.datasources.exemplarTraceIdDestinations.datasourceUid }}
-          name: {{ .Values.grafana.sidecar.datasources.exemplarTraceIdDestinations.traceIdLabelName }}
-{{- end }}
-{{- if .Values.grafana.sidecar.datasources.createPrometheusReplicasDatasources }}
-{{- range until (int .Values.prometheus.prometheusSpec.replicas) }}
-    - name: "{{ $.Values.grafana.sidecar.datasources.name }}-{{ . }}"
-      type: prometheus
-      uid: {{ $.Values.grafana.sidecar.datasources.uid }}-replica-{{ . }}
-      url: http://prometheus-{{ template "kube-prometheus-stack.prometheus.crname" $ }}-{{ . }}.prometheus-operated:9090/{{ trimPrefix "/" $.Values.prometheus.prometheusSpec.routePrefix }}
-      access: proxy
-      isDefault: false
-      jsonData:
-        timeInterval: {{ $scrapeInterval }}
-{{- if $.Values.grafana.sidecar.datasources.exemplarTraceIdDestinations }}
-        exemplarTraceIdDestinations:
-        - datasourceUid: {{ $.Values.grafana.sidecar.datasources.exemplarTraceIdDestinations.datasourceUid }}
-          name: {{ $.Values.grafana.sidecar.datasources.exemplarTraceIdDestinations.traceIdLabelName }}
-{{- end }}
-{{- end }}
-{{- end }}
-{{- if .Values.grafana.sidecar.datasources.alertmanager.enabled }}
-    - name: "{{ .Values.grafana.sidecar.datasources.alertmanager.name }}"
-      type: alertmanager
-      uid: {{ .Values.grafana.sidecar.datasources.alertmanager.uid }}
-      {{- if .Values.grafana.sidecar.datasources.alertmanager.url }}
-      url: {{ .Values.grafana.sidecar.datasources.alertmanager.url }}
-      {{- else }}
-      url: http://{{ template "kube-prometheus-stack.fullname" . }}-alertmanager.{{ template "kube-prometheus-stack.namespace" . }}:{{ .Values.alertmanager.service.port }}/{{ trimPrefix "/" .Values.alertmanager.alertmanagerSpec.routePrefix }}
-      {{- end }}
-      access: proxy
-      jsonData:
-        handleGrafanaManagedAlerts: {{ .Values.grafana.sidecar.datasources.alertmanager.handleGrafanaManagedAlerts }}
-        implementation: {{ .Values.grafana.sidecar.datasources.alertmanager.implementation }}
-{{- end }}
-{{- end }}
-{{- if .Values.grafana.additionalDataSources }}
-{{ tpl (toYaml .Values.grafana.additionalDataSources | indent 4) . }}
-{{- end }}
-{{- end }}
+{{ include "kube-prometheus-stack.datasources" . | indent 4 }}
