--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1013,6 +1013,22 @@ grafana:
   ##
   forceDeployDatasources: false
 
+  ## ConfigMapDatasources Create datasources as configmaps
+  ##
+  configMapDatasources: true
+
+  ## OperatorDatasources Create datasources as crds
+  ##
+  
+  operatorDatasources: false
+
+  ## OperatorInstanceSelector Selects the instance of the operator to use for grafana operator
+  ##
+
+  operatorInstanceSelector: 
+    app.kubernetes.io/instance: grafana
+    app.kubernetes.io/name: grafana-operator
+
   ## ForceDeployDashboard Create dashboard configmap even if grafana deployment has been disabled
   ##
   forceDeployDashboards: false
