[kube-prometheus-stack] fixed typo
Signed-off-by: Oleg Tsymbal <dzirg44@gmail.com>

--- a/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
@@ -23,3 +23,4 @@ data:
     prune: {{ .Values.grafana.prune }}
 {{- end }}
 {{ include "kube-prometheus-stack.datasources" . | indent 4 }}
+{{- end }}
