[kube-prometheus-stack] improve the logic
Signed-off-by: Oleg Tsymbal <dzirg44@gmail.com>

--- a/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
@@ -1,4 +1,5 @@
 {{- if or (and .Values.grafana.enabled .Values.grafana.sidecar.datasources.enabled) .Values.grafana.forceDeployDatasources }}
+{{- if .Values.grafana.configMapDatasources }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -22,5 +23,6 @@ data:
 {{- if .Values.grafana.prune }}
     prune: {{ .Values.grafana.prune }}
 {{- end }}
-{{ include "kube-prometheus-stack.datasources" . | indent 4 }}
+{{ include "kube-prometheus-stack.datasources" . | trim | indent 4 }}
+{{- end }}
 {{- end }}
