--- a/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
@@ -3,26 +3,26 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "kube-prometheus-stack.fullname" . }}-grafana-datasource
-  namespace: {{ template "kube-prometheus-stack-grafana.namespace" . }}
-{{- if .Values.grafana.sidecar.datasources.annotations }}
+  name: {{ include "kube-prometheus-stack.fullname" . }}-grafana-datasource
+  namespace: {{ include "kube-prometheus-stack-grafana.namespace" . }}
+  {{- with .Values.grafana.sidecar.datasources.annotations }}
   annotations:
-    {{- toYaml .Values.grafana.sidecar.datasources.annotations | nindent 4 }}
-{{- end }}
+{{ toYaml . | nindent 4 }}
+  {{- end }}
   labels:
-    {{ $.Values.grafana.sidecar.datasources.label }}: {{ $.Values.grafana.sidecar.datasources.labelValue | quote }}
-    app: {{ template "kube-prometheus-stack.name" $ }}-grafana
-{{ include "kube-prometheus-stack.labels" $ | indent 4 }}
+    {{ .Values.grafana.sidecar.datasources.label }}: {{ .Values.grafana.sidecar.datasources.labelValue | quote }}
+    app: {{ include "kube-prometheus-stack.name" . }}-grafana
+    {{ include "kube-prometheus-stack.labels" . | nindent 4 }}
 data:
   datasource.yaml: |-
     apiVersion: 1
-{{- if .Values.grafana.deleteDatasources }}
+    {{- if .Values.grafana.deleteDatasources }}
     deleteDatasources:
-{{ tpl (toYaml .Values.grafana.deleteDatasources | indent 6) . }}
-{{- end }}
-{{- if .Values.grafana.prune }}
+{{ tpl (toYaml .Values.grafana.deleteDatasources | indent 6) . | trim }}
+    {{- end }}
+    {{- if .Values.grafana.prune }}
     prune: {{ .Values.grafana.prune }}
-{{- end }}
-{{ include "kube-prometheus-stack.datasources" . | trim | indent 4 }}
+    {{- end }}
+    datasources: {{- (include "kube-prometheus-stack.datasources" . | fromYaml).datasources | toYaml | nindent 6 }}
 {{- end }}
 {{- end }}
