[kube-prometheus-stack] improve resource rendering
Signed-off-by: Oleg Tsymbal <dzirg44@gmail.com>

--- a/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmaps-datasources.yaml
@@ -23,6 +23,6 @@ data:
     {{- if .Values.grafana.prune }}
     prune: {{ .Values.grafana.prune }}
     {{- end }}
-    datasources: {{- (include "kube-prometheus-stack.datasources" . | fromYaml).datasources | toYaml | nindent 6 }}
+    datasources: {{- (include "kube-prometheus-stack.grafana.datasources" . | fromYaml).datasources | toYaml | nindent 6 }}
 {{- end }}
 {{- end }}
