[kube-prometheus-stack] rename additional rules
Signed-off-by: TheRealNoob <mike1118@live.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/additionalPrometheusRules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/additionalPrometheusRules.yaml
@@ -10,7 +10,7 @@ items:
   - apiVersion: monitoring.coreos.com/v1
     kind: PrometheusRule
     metadata:
-      name: {{ template "kube-prometheus-stack.name" $ }}-{{ $prometheusRuleName }}
+      name: {{ template "kube-prometheus-stack.fullname" $ }}-{{ $prometheusRuleName }}
       namespace: {{ template "kube-prometheus-stack.namespace" $ }}
       labels:
         app: {{ template "kube-prometheus-stack.name" $ }}
@@ -27,7 +27,7 @@ items:
   - apiVersion: monitoring.coreos.com/v1
     kind: PrometheusRule
     metadata:
-      name: {{ template "kube-prometheus-stack.name" $ }}-{{ .name }}
+      name: {{ template "kube-prometheus-stack.fullname" $ }}-{{ .name }}
       namespace: {{ template "kube-prometheus-stack.namespace" $ }}
       labels:
         app: {{ template "kube-prometheus-stack.name" $ }}
