--- a/charts/kube-prometheus-stack/templates/prometheus/additionalPrometheusRules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/additionalPrometheusRules.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: List
 metadata:
-  name: {{ include "kube-prometheus-stack.fullname" $ }}-additional-prometheus-rules
+  name: {{ printf "%s-%s" (include "kube-prometheus-stack.fullname" $) "additional-prometheus-rules" | trunc 63 | trimSuffix "-" }}
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
 items:
 {{- if .Values.additionalPrometheusRulesMap }}
@@ -10,7 +10,7 @@ items:
   - apiVersion: monitoring.coreos.com/v1
     kind: PrometheusRule
     metadata:
-      name: {{ template "kube-prometheus-stack.fullname" $ }}-{{ $prometheusRuleName }}
+      name: {{ printf "%s-%s" (include "kube-prometheus-stack.fullname" $) $prometheusRuleName | trunc 63 | trimSuffix "-" }}
       namespace: {{ template "kube-prometheus-stack.namespace" $ }}
       labels:
         app: {{ template "kube-prometheus-stack.name" $ }}
@@ -27,7 +27,7 @@ items:
   - apiVersion: monitoring.coreos.com/v1
     kind: PrometheusRule
     metadata:
-      name: {{ template "kube-prometheus-stack.fullname" $ }}-{{ .name }}
+      name: {{ printf "%s-%s" (include "kube-prometheus-stack.fullname" $) .name | trunc 63 | trimSuffix "-" }}
       namespace: {{ template "kube-prometheus-stack.namespace" $ }}
       labels:
         app: {{ template "kube-prometheus-stack.name" $ }}
