feat: add revisionHistoryLimit as a value to blackbox-exporter helmchart
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -79,6 +79,8 @@ extraContainers: []
   #     - mountPath: /etc/prometheus/secrets/blackbox-tls
   #       name: secret-blackbox-tls
 
+revisionHistoryLimit: 10
+
 # String mode
 # extraContainers: |-
 #   - name: oAuth2-proxy
