feat: add revisionHistoryLimit as a value to json-exporter helmchart
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-json-exporter/values.yaml
+++ b/charts/prometheus-json-exporter/values.yaml
@@ -115,6 +115,8 @@ resources: {}
 #   cpu: 100m
 #   memory: 128Mi
 
+revisionHistoryLimit: 10
+
 environmentVariables: []
   # - name: some-secret-variable
   #   valueFrom:
