add kubernetes merge key and merge strategy to groups and rules in promethues rule crd.  Signed-off-by: Hossein Mohammadi <hn.mohammadi7@gmail.com>
Signed-off-by: Hossein Mohammadi <hn.mohammadi7@gmail.com>

--- a/charts/kube-prometheus-stack/charts/crds/crds/crd-prometheusrules.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/crds/crd-prometheusrules.yaml
@@ -145,6 +145,8 @@ spec:
                         - expr
                         type: object
                       type: array
+                      x-kubernetes-patch-merge-key: alert
+                      x-kubernetes-patch-strategy: merge
                   required:
                   - name
                   type: object
@@ -152,6 +154,8 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+                x-kubernetes-patch-merge-key: name
+                x-kubernetes-patch-strategy: merge
             type: object
         required:
         - spec
