Disable kube-state-metrics service scraping  by default
Chart is set up to install the service monitor for kube-state-metrics so it's easy to duplicate metrics if scraping is not disabled.

Signed-off-by: gdsmith <george@mukuru.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2377,8 +2377,17 @@ prometheus-node-exporter:
     labels:
       jobLabel: node-exporter
 
+  ## Enable scraping via kubernetes-service-endpoints
+  ## Disabled by default as we service monitor is enabled below
+  ##
+  prometheusScrape: false
+
   prometheus:
     monitor:
+
+      ## Enable scraping via service monitor
+      ## Disable to prevent duplication if you enable prometheusScrape above
+      ##
       enabled: true
 
       jobLabel: jobLabel
