Add "externalTrafficPolicy" to Prometheus service.
Signed-off-by: Víctor Díaz Marco <victor@nebux.cloud>

--- a/charts/prometheus/templates/service.yaml
+++ b/charts/prometheus/templates/service.yaml
@@ -30,6 +30,9 @@ spec:
     - {{ $cidr }}
   {{- end }}
 {{- end }}
+{{- if ne .Values.server.service.type "ClusterIP" }}
+  externalTrafficPolicy: {{ .Values.server.service.externalTrafficPolicy }}
+{{- end }}
   ports:
     - name: http
       port: {{ .Values.server.service.servicePort }}
