--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -724,6 +724,7 @@ server:
     servicePort: 80
     sessionAffinity: None
     type: ClusterIP
+    externalTrafficPolicy: ""
 
     ## Enable gRPC port on service to allow auto discovery with thanos-querier
     gRPC:
