[kube-prometheus-stack] Disable kube-state-metrics service scraping  by default (#5260)

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2278,8 +2278,18 @@ kube-state-metrics:
   rbac:
     create: true
   releaseLabel: true
+
+  ## Enable scraping via kubernetes-service-endpoints
+  ## Disabled by default as we service monitor is enabled below
+  ##
+  prometheusScrape: false
+
   prometheus:
     monitor:
+
+      ## Enable scraping via service monitor
+      ## Disable to prevent duplication if you enable prometheusScrape above
+      ##
       enabled: true
 
       ## Scrape interval. If not set, the Prometheus default scrape interval is used.
