--- a/charts/prometheus-json-exporter/Chart.yaml
+++ b/charts/prometheus-json-exporter/Chart.yaml
@@ -6,7 +6,11 @@ keywords:
   - monitoring
   - prometheus
 type: application
-version: 0.14.1
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+# It is recommended to use it with quotes.
+version: 0.14.2
 appVersion: "v0.6.0"
 home: https://github.com/prometheus-community/json_exporter
 maintainers:
