--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1017,7 +1017,7 @@ grafana:
   ##
   configMapDatasources: true
 
-  ## OperatorDatasources Create datasources as crds
+  ## OperatorDatasources Create datasources as Grafana Operator Custom Resource
   ##
   
   operatorDatasources: false
@@ -1025,9 +1025,9 @@ grafana:
   ## OperatorInstanceSelector Selects the instance of the operator to use for grafana operator
   ##
 
-  operatorInstanceSelector: 
-    app.kubernetes.io/instance: grafana
-    app.kubernetes.io/name: grafana-operator
+  operatorInstanceSelector: {}
+  ## app.kubernetes.io/instance: grafana
+  ## app.kubernetes.io/name: grafana-operator
 
   ## ForceDeployDashboard Create dashboard configmap even if grafana deployment has been disabled
   ##
