--- a/charts/prometheus/templates/service.yaml
+++ b/charts/prometheus/templates/service.yaml
@@ -30,7 +30,7 @@ spec:
     - {{ $cidr }}
   {{- end }}
 {{- end }}
-{{- if ne .Values.server.service.type "ClusterIP" }}
+{{- if .Values.server.service.externalTrafficPolicy }}
   externalTrafficPolicy: {{ .Values.server.service.externalTrafficPolicy }}
 {{- end }}
   ports:
