[prometheus] Add "externalTrafficPolicy" to server's service (#5261)
* Add "externalTrafficPolicy" to Prometheus service.

Signed-off-by: Víctor Díaz Marco <victor@nebux.cloud>

* Apply "externalTrafficPolicy" only if explicitly set.

Signed-off-by: Víctor Díaz Marco <victor@nebux.cloud>

* Bump version.

Signed-off-by: Víctor Díaz Marco <victor@nebux.cloud>

---------

Signed-off-by: Víctor Díaz Marco <victor@nebux.cloud>
Co-authored-by: MH <zanhsieh@gmail.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -724,6 +724,8 @@ server:
     servicePort: 80
     sessionAffinity: None
     type: ClusterIP
+    ## externalTrafficPolicy is applicable to service with externally-facing addresses (NodePorts, ExternalIPs, and LoadBalancer IPs)
+    externalTrafficPolicy: ""
 
     ## Enable gRPC port on service to allow auto discovery with thanos-querier
     gRPC:
