--- a/charts/prometheus/templates/service.yaml
+++ b/charts/prometheus/templates/service.yaml
@@ -30,6 +30,9 @@ spec:
     - {{ $cidr }}
   {{- end }}
 {{- end }}
+{{- if .Values.server.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .Values.server.service.externalTrafficPolicy }}
+{{- end }}
   ports:
     - name: http
       port: {{ .Values.server.service.servicePort }}
