fix wrong linebreak for multiple routes and add feature to create https redirect route
Signed-off-by: Pinnow René <rene.pinnow.bu@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -579,6 +579,9 @@ alertmanager:
       parentRefs: []
       # - name: acme-gw
 
+      # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      httpsRedirect: false
+
       matches:
         - path:
             type: PathPrefix
@@ -3587,6 +3590,9 @@ prometheus:
       parentRefs: []
       # - name: acme-gw
 
+      # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      httpsRedirect: false
+
       matches:
       - path:
           type: PathPrefix
@@ -4741,6 +4747,9 @@ thanosRuler:
       # - my-filter.example.com
       parentRefs: []
       # - name: acme-gw
+
+      # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      httpsRedirect: false
 
       matches:
         - path:
