fix: include explanation from parent main in Chart.yaml
Signed-off-by: CarstenSon <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-json-exporter/Chart.yaml
+++ b/charts/prometheus-json-exporter/Chart.yaml
@@ -6,6 +6,10 @@ keywords:
   - monitoring
   - prometheus
 type: application
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+# It is recommended to use it with quotes.
 version: 0.15.0
 appVersion: "v0.6.0"
 home: https://github.com/prometheus-community/json_exporter
