add addtional comment and fix indent
Signed-off-by: Pinnow René <rene.pinnow.bu@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -4748,7 +4748,8 @@ thanosRuler:
       parentRefs: []
       # - name: acme-gw
 
-      # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      ## create http route for https redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects).
+      ## matches, filters and additionalRules will be ignored if this is set to true
       httpsRedirect: false
 
       matches:
