--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -101,7 +101,11 @@ certManager:
   ## An issuer represents a certificate issuing authority.
   ## If not set, new issuers will be created.
   ## ref. https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.Issuer
-  issuerRef: ""
+  issuerRef: {}
+    # name: ""
+    # kind: ""
+    ## group is optional since cert-manager will default to this value however
+    # group: "cert-manager.io"
   ## rootCert allows setting certificate's lifetime when creating an issuer, defaults to 5y
   rootCert: {}
     # duration: "43800h0m0s"
