--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -104,7 +104,8 @@ certManager:
   issuerRef: {}
     # name: ""
     # kind: ""
-    ## group is optional since cert-manager will default to this value however
+    ## group is optional since cert-manager will default to this value anyway
+    ## if you are using an external issuer, change this to that issuer group.
     # group: "cert-manager.io"
   ## rootCert allows setting certificate's lifetime when creating an issuer, defaults to 5y
   rootCert: {}
