[kube-prometheus-stack] set --force-conflicts on CRD job
Signed-off-by: Devin Buhl <devin@buhl.casa>

--- a/charts/kube-prometheus-stack/charts/crds/templates/upgrade/job.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/templates/upgrade/job.yaml
@@ -86,6 +86,9 @@ spec:
           args:
             - apply
             - --server-side
+            {{- if .Values.upgradeJob.forceConflicts }}
+            - --force-conflicts
+            {{- end }}
             - --filename
             - /tmp/crds.yaml
           {{- with .Values.upgradeJob.resources }}
