[all] Add MAINTAINERS.md
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/check-codeowners-maintainers.yaml
+++ b/.github/workflows/check-codeowners-maintainers.yaml
@@ -1,4 +1,4 @@
-name: Check CODEOWNERS
+name: Check CODEOWNERS & MAINTAINERS.md
 permissions: {}
 
 on: pull_request
@@ -16,5 +16,13 @@ jobs:
           ./scripts/check-codeowners.sh | tee .github/CODEOWNERS
 
       - name: check CODEOWNERS for modifications
+        run: |
+          git diff --exit-code
+
+      - name: generate MAINTAINERS.md
+        run: |
+          ./scripts/check-maintainers.sh | tee MAINTAINERS.md
+
+      - name: check MAINTAINERS.md for modifications
         run: |
           git diff --exit-code
