--- a/charts/alertmanager/templates/services.yaml
+++ b/charts/alertmanager/templates/services.yaml
@@ -29,7 +29,7 @@ spec:
   {{- end }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 9093
       protocol: TCP
       name: http
       {{- if (and (eq .Values.service.type "NodePort") .Values.service.nodePort) }}
@@ -55,7 +55,7 @@ spec:
   clusterIP: None
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 9093
       protocol: TCP
       name: http
     {{- if or (gt (int .Values.replicaCount) 1) (.Values.additionalPeers) }}
