[kube-prometheus-stack] add support for scrapeFailureLogFile
Signed-off-by: Amos Shapira <amos.shapira@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -118,6 +118,9 @@ spec:
   scrapeClasses:
     {{- tpl (toYaml . | nindent 4) $ }}
 {{- end }}
+{{- if .Values.prometheus.prometheusSpec.scrapeFailureLogFile }}
+  scrapeFailureLogFile: {{ .Values.prometheus.prometheusSpec.scrapeFailureLogFile }}
+{{- end }}
 {{- if .Values.prometheus.prometheusSpec.scrapeInterval }}
   scrapeInterval: {{ .Values.prometheus.prometheusSpec.scrapeInterval }}
 {{- end }}
