[prometheus-blackbox-exporter] rename value configPath to configFile
Signed-off-by: Jakob Hahn <jakob.hahn@hetzner.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -172,8 +172,8 @@ config:
         follow_redirects: true
         preferred_ip_protocol: "ip4"
 
-# Set custom config path, other than default /config/blackbox.yaml. If let empty, path will be "/config/blackbox.yaml"
-# configPath: "/foo/bar"
+# Set custom config file, other than default /config/blackbox.yaml. If let empty, path will be "/config/blackbox.yaml"
+# configFile: "/foo/blackbox.yaml"
 
 extraConfigmapMounts: []
   # - name: certs-configmap
