--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -153,11 +153,11 @@ spec:
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.secrets }}
   secrets:
-{{ toYaml .Values.prometheus.prometheusSpec.secrets | indent 4 }}
+{{ tpl (toYaml .Values.prometheus.prometheusSpec.secrets) . | indent 4 }}
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.configMaps }}
   configMaps:
-{{ toYaml .Values.prometheus.prometheusSpec.configMaps | indent 4 }}
+{{ tpl (toYaml .Values.prometheus.prometheusSpec.configMaps) . | indent 4 }}
 {{- end }}
   serviceAccountName: {{ template "kube-prometheus-stack.prometheus.serviceAccountName" . }}
 {{- if .Values.prometheus.prometheusSpec.serviceMonitorSelector }}
