[kube-prometheus-stack] add link to upgrade process in ArtifactHub (#5304)
Signed-off-by: this-is-tobi <this-is-tobi@proton.me>

--- a/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kube-prometheus-stack/Chart.yaml
@@ -47,6 +47,8 @@ annotations:
       url: https://github.com/prometheus-community/helm-charts
     - name: Upstream Project
       url: https://github.com/prometheus-operator/kube-prometheus
+    - name: Upgrade Process
+      url: https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/README.md#upgrading-chart
 dependencies:
   - name: crds
     version: "0.0.0"
