Adding ability to add custom volumeName to config-reloader
Signed-off-by: evaldas <evaldas.blauzdziunas@hotmail.com>

--- a/charts/prometheus-snmp-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-snmp-exporter/templates/daemonset.yaml
@@ -97,7 +97,7 @@ spec:
 {{ toYaml .Values.configmapReload.resources | indent 12 }}
           volumeMounts:
             - mountPath: /etc/config
-              name: config
+              name: "{{ .Values.configmapReload.volumeName }}"
               readOnly: true
       {{- end }}
       {{- if .Values.imagePullSecrets }}
