--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -147,6 +147,10 @@ configmapReload:
   ## configmap-reload container name
   ##
   name: configmap-reload
+  ## volume name to mount to prometheus-config-reloader. Default "config"
+  ## Can use projected volume name in extraVolumes and mount multiple secrets, configmaps in single volume to watch for changes.
+  ##
+  volumeName: config
 
   ## configmap-reload container image
   ##
