--- a/charts/prometheus-snmp-exporter/templates/deployment.yaml
+++ b/charts/prometheus-snmp-exporter/templates/deployment.yaml
@@ -104,7 +104,7 @@ spec:
 {{ toYaml .Values.configmapReload.resources | indent 12 }}
           volumeMounts:
             - mountPath: /etc/config
-              name: config
+              name: "{{ .Values.configmapReload.volumeName }}"
               readOnly: true
       {{- end }}
       {{- if .Values.imagePullSecrets }}
