[kube-api-server] Configuration of serviceMonitor path
Signed-off-by: Lucas POUZAC <lucas.pouzac@lpoconseil.fr>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1392,6 +1392,10 @@ kubeApiServer:
     ##
     proxyUrl: ""
 
+    ## path: path that should be used for scraping. Example /metrics for EKS cluster
+    ##
+    path: ""
+
     jobLabel: component
     selector:
       matchLabels:
