--- a/charts/kube-prometheus-stack/templates/exporters/kube-api-server/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-api-server/servicemonitor.yaml
@@ -24,6 +24,9 @@ spec:
     {{- if .Values.kubeApiServer.serviceMonitor.proxyUrl }}
     proxyUrl: {{ .Values.kubeApiServer.serviceMonitor.proxyUrl }}
     {{- end }}
+    {{- if .Values.kubeApiServer.serviceMonitor.path }}
+    path: {{ .Values.kubeApiServer.serviceMonitor.path }}
+    {{- end }}
     port: https
     scheme: https
 {{- if .Values.kubeApiServer.serviceMonitor.metricRelabelings }}
