feat(alertmanager): add NetworkPolicy support
- Add NetworkPolicy for Alertmanager ingress/egress control
- Allow configurable ingress from ingress controller
- Allow ingress from Prometheus
- Allow egress for DNS, SMTP, and webhooks
- Add unit tests for NetworkPolicy
- Update documentation in values.yaml

Fixes #5247

Signed-off-by: samuelarogbonlo <sbayo971@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -408,6 +408,29 @@ alertmanager:
   ##
   forceDeployDashboards: false
 
+  ## Network Policy configuration
+  ##
+  networkPolicy:
+    # -- Enable network policy for Alertmanager
+    ## Allows ingress from:
+    ## - Specified ingress controller
+    ## - Prometheus pods
+    ## - Other Alertmanager pods (for clustering)
+    ## Allows egress for:
+    ## - DNS resolution (port 53)
+    ## - SMTP notifications (ports 25, 587, 465)
+    ## - Webhook notifications (ports 80, 443)
+    enabled: false
+    # -- Ingress controller namespace
+    ## Namespace of the ingress controller
+    ##
+    ingressNS: "ingress-nginx"
+    # -- Ingress controller pod labels
+    ## Pod labels of the ingress controller
+    ##
+    ingressPodLabels:
+      app.kubernetes.io/name: ingress-nginx
+
   ## Service account for Alertmanager to use.
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
   ##
