[alertmanager] Add support for extra labels in Alertmanager ingress
Signed-off-by: jiaychen <jiayu.chen@camptocamp.com>

--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -144,6 +144,7 @@ servicePerReplica:
 ingress:
   enabled: false
   className: ""
+  labels: {}
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
