add addtional comment for correct usage of httpsRedirect
Signed-off-by: Pinnow René <rene.pinnow.bu@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -580,6 +580,8 @@ alertmanager:
       # - name: acme-gw
 
       # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      ## Take care that you only enable this on the http listener of the gateway to avoid an infinite redirect.
+      ## matches, filters and additionalRules will be ignored if this is set to true. Be are
       httpsRedirect: false
 
       matches:
@@ -3591,12 +3593,14 @@ prometheus:
       # - name: acme-gw
 
       # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      ## Take care that you only enable this on the http listener of the gateway to avoid an infinite redirect.
+      ## matches, filters and additionalRules will be ignored if this is set to true. Be are
       httpsRedirect: false
 
       matches:
-      - path:
-          type: PathPrefix
-          value: /
+        - path:
+            type: PathPrefix
+            value: /
 
       ## Filters define the filters that are applied to requests that match this rule.
       filters: []
@@ -4748,8 +4752,9 @@ thanosRuler:
       parentRefs: []
       # - name: acme-gw
 
-      ## create http route for https redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects).
-      ## matches, filters and additionalRules will be ignored if this is set to true
+      # -- create http route for redirect (https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects)
+      ## Take care that you only enable this on the http listener of the gateway to avoid an infinite redirect.
+      ## matches, filters and additionalRules will be ignored if this is set to true. Be are
       httpsRedirect: false
 
       matches:
