[prometheus-mongodb-exporter] Fix unnecessary required auth when doing multi-target
Signed-off-by: Kalle Fagerberg <kalle.fagerberg@riskident.com>

--- a/charts/prometheus-mongodb-exporter/templates/deployment.yaml
+++ b/charts/prometheus-mongodb-exporter/templates/deployment.yaml
@@ -31,8 +31,9 @@ spec:
           {{- if .Values.serviceMonitor.multiTarget.enabled }}
             - name: MONGODB_URI
               value: {{ include "prometheus-mongodb-exporter.mongodbUri" . }}
+            {{- if .Values.serviceMonitor.multiTarget.username }}
             - name: MONGODB_USER
-              value: {{ required "The MongoDB username must be set" .Values.serviceMonitor.multiTarget.username }}
+              value: {{ .Values.serviceMonitor.multiTarget.username }}
             - name: MONGODB_PASSWORD
               {{- if and .Values.serviceMonitor.multiTarget.password.existingSecret.name .Values.serviceMonitor.multiTarget.password.existingSecret.key }}
               valueFrom:
@@ -42,6 +43,7 @@ spec:
               {{- else }}
               value: {{ .Values.serviceMonitor.multiTarget.password.value }}
               {{- end }}
+            {{- end }}
           {{- else }}
             - name: MONGODB_URI
               valueFrom:
