--- a/charts/prometheus-mongodb-exporter/values.yaml
+++ b/charts/prometheus-mongodb-exporter/values.yaml
@@ -105,6 +105,7 @@ serviceMonitor:
   multiTarget:
     enabled: false
     # The username and password must be the same for every target configured below
+    # The password is only added if the username is also set.
     username: ""
     password:
       existingSecret:
