[kube-prometheus-stack]Add urlDisplayLabel to exemplar config
This adds the urlDisplayLabel to the exemplar config section for the prometheus datasource in Grafana.

Signed-off-by: Erik Everts <e.everts@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1277,6 +1277,7 @@ grafana:
       exemplarTraceIdDestinations: {}
         # datasourceUid: Jaeger
         # traceIdLabelName: trace_id
+        # urlDisplayLabel: View traces
       alertmanager:
         enabled: true
         name: Alertmanager
