[prometheus-smartctl-exporter] Extend PrometheusRule templating
Signed-off-by: Artem Babii <arthem.babij@gmail.com>
Signed-off-by: Artyom Babiy <artyom.babiy@gmail.com>

--- a/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/prometheusrule.yaml
@@ -13,6 +13,12 @@ metadata:
 {{- end }}
 spec:
   groups:
-  - name: smartctl-exporter.rules
-{{ .Files.Get "rules/rules.txt" | indent 4 }}
+    - name: {{ template "prometheus-smartctl-exporter.name" $ }}
+      rules:
+      {{- with .Values.prometheusRules.defaultRules }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
+      {{- end }}
+      {{- with .Values.prometheusRules.customRules }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
+      {{- end }}
 {{- end }}
