[kube-prometheus-stack]Add urlDisplayLabel to exemplar config (#5341)
Co-authored-by: Jan-Otto Kröpke <github@jkroepke.de>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1346,6 +1346,7 @@ grafana:
       exemplarTraceIdDestinations: {}
         # datasourceUid: Jaeger
         # traceIdLabelName: trace_id
+        # urlDisplayLabel: View traces
       alertmanager:
         enabled: true
         name: Alertmanager
