fix - prom op doc
Signed-off-by: Hélia Barroso <helia_barroso@hotmail.com>

--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -290,7 +290,7 @@ service:
 tolerations: []
 
 ## prometheusRule for creating prometheus rules
-## https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#monitoring.coreos.com/v1.PrometheusRule
+## https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api-reference/api.md#prometheusrule
 prometheusRule:
   enabled: false
   ## Override namespace where the rules get deployed
@@ -312,7 +312,7 @@ prometheusRule:
 
 ## serviceMonitor allows creating a service monitor for Prometheus operator to assemble corresponding
 ## configuration for Prometheus
-## Ref. https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#monitoring.coreos.com/v1.ServiceMonitor
+## Ref. https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api-reference/api.md#servicemonitor
 serviceMonitor:
   ## Enable service monitor
   enabled: false
