refactor template to include the standard `imagePullSecrets`
Signed-off-by: Josua Blejeru <josua@blejeru.com>

--- a/charts/prometheus-adapter/values.yaml
+++ b/charts/prometheus-adapter/values.yaml
@@ -2,6 +2,9 @@ affinity: {}
 
 topologySpreadConstraints: []
 
+# -- List of secret names to use for pulling the images
+imagePullSecrets: []
+
 image:
   repository: registry.k8s.io/prometheus-adapter/prometheus-adapter
   # if not set appVersion field from Chart.yaml is used
@@ -22,11 +25,13 @@ priorityClassName: ""
 namespaceOverride: ""
 
 ## Additional annotations to add to all resources
-customAnnotations: {}
+customAnnotations:
+  {}
   # role: custom-metrics
 
 ## Additional labels to add to all resources
-customLabels: {}
+customLabels:
+  {}
   # monitoring: prometheus-adapter
 
 # Url to access prometheus
@@ -86,7 +91,8 @@ serviceAccount:
   annotations: {}
 
 # Custom DNS configuration to be added to prometheus-adapter pods
-dnsConfig: {}
+dnsConfig:
+  {}
   # nameservers:
   #   - 1.2.3.4
   # searches:
@@ -97,7 +103,8 @@ dnsConfig: {}
   #     value: "2"
   #   - name: edns0
 
-resources: {}
+resources:
+  {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
@@ -131,7 +138,8 @@ startupProbe: {}
 rules:
   default: true
 
-  custom: []
+  custom:
+    []
     # - seriesQuery: '{__name__=~"^some_metric_count$"}'
     #   resources:
     #     template: <<.Resource>>
@@ -144,7 +152,8 @@ rules:
   # default, custom, external and resource entries
   existing:
 
-  external: []
+  external:
+    []
     # - seriesQuery: '{__name__=~"^some_metric_count$"}'
     #   resources:
     #     template: <<.Resource>>
@@ -213,7 +222,8 @@ tls:
     # Public key of the APIService
 
 # Set environment variables from secrets, configmaps or by setting them as name/value
-env: []
+env:
+  []
   # - name: TMP_DIR
   #   value: /tmp
   # - name: PASSWORD
@@ -224,7 +234,8 @@ env: []
   #       optional: false
 
 # Any extra arguments
-extraArguments: []
+extraArguments:
+  []
   # - --tls-private-key-file=/etc/tls/tls.key
   # - --tls-cert-file=/etc/tls/tls.crt
 
@@ -232,7 +243,8 @@ extraArguments: []
 extraContainers: []
 
 # Any extra volumes
-extraVolumes: []
+extraVolumes:
+  []
   # - name: example-name
   #   hostPath:
   #     path: /path/on/host
@@ -243,7 +255,8 @@ extraVolumes: []
   #     type: File
 
 # Any extra volume mounts
-extraVolumeMounts: []
+extraVolumeMounts:
+  []
   #   - name: example-name
   #     mountPath: /path/in/container
   #   - name: ssl-certs
