chore: Remove unresponsive maintainer
Remove unresponsive maintainer @sandy724.

Closes: https://github.com/prometheus-community/helm-charts/issues/5159

Signed-off-by: SuperQ <superq@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -21,7 +21,7 @@
 /charts/prometheus-conntrack-stats-exporter/ @monotek
 /charts/prometheus-consul-exporter/ @gkarthiks @timm088
 /charts/prometheus-couchdb-exporter/ @gkarthiks
-/charts/prometheus-druid-exporter/ @iamabhishek-dubey @sandy724
+/charts/prometheus-druid-exporter/ @iamabhishek-dubey
 /charts/prometheus-elasticsearch-exporter/ @desaintmartin @svenmueller @zeritti
 /charts/prometheus-fastly-exporter/ @arslanbekov
 /charts/prometheus-ipmi-exporter/ @lexfrei
