set default value to nill to align with other charts
Signed-off-by: Aran Shavit <Aranshavit@gmail.com>

--- a/charts/prometheus-adapter/values.yaml
+++ b/charts/prometheus-adapter/values.yaml
@@ -293,5 +293,5 @@ certManager:
   # -- Set the revisionHistoryLimit on the Certificates. See
   # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
   # Defaults to nil.
-  caCertRevisionHistoryLimit: ""
-  certRevisionHistoryLimit: ""
+  caCertRevisionHistoryLimit:
+  certRevisionHistoryLimit:
