Add nameValidationScheme field to Prometheus CR (#5397)
Signed-off-by: Sviat Loginov <sviat.loginov@placer.ai>
Signed-off-by: Quentin Bisson <quentin.bisson@gmail.com>
Co-authored-by: Quentin Bisson <quentin.bisson@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -4510,6 +4510,10 @@ prometheus:
     ## in Prometheus so it may change in any upcoming release.
     allowOverlappingBlocks: false
 
+    ## Specifies the validation scheme for metric and label names.
+    ## Supported values are: Legacy, UTF8
+    nameValidationScheme: ""
+
     ## Minimum number of seconds for which a newly created pod should be ready without any of its container crashing for it to
     ## be considered available. Defaults to 0 (pod will be considered available as soon as it is ready).
     minReadySeconds: 0
