[prometheus-redis-exporter] Add networkpolicy
Signed-off-by: Pim van den Broek <pim.vandenbroek@hotmail.com>

--- a/charts/prometheus-redis-exporter/values.yaml
+++ b/charts/prometheus-redis-exporter/values.yaml
@@ -38,7 +38,8 @@ service:
   port: 9121
   portName: redis-exporter
   annotations: {}
-  labels: {}
+  labels:
+    {}
     # prometheus.io/path: /metrics
     # prometheus.io/port: "9121"
     # prometheus.io/scrape: "true"
@@ -53,7 +54,8 @@ affinity: {}
 priorityClassName: ""
 
 ## Extra manifests to deploy as an array
-extraManifests: []
+extraManifests:
+  []
   # - apiVersion: v1
   #   kind: ConfigMap
   #   metadata:
@@ -163,7 +165,8 @@ prometheusRule:
   enabled: false
   additionalLabels: {}
   namespace: ""
-  rules: []
+  rules:
+    []
     ## These are just examples rules, please adapt them to your needs.
     ## Make sure to constraint the rules to the current service.
     #  - alert: RedisDown
@@ -225,6 +228,12 @@ auth:
     secret:
       name: ""
       key: ""
+
+  networkPolicy:
+    # This is useful on clusters using Calico and/or native k8s network policies in a default-deny setup.
+    enabled: false
+    # -- A list of valid from selectors according to https://kubernetes.io/docs/concepts/services-networking/network-policies.
+    ingressFrom: []
 
 podSecurityContext: {}
 # Example podsecurity policy
